# minuit-controller

minuit_controller/: CMakeLists.txt  Makefile  UDPserver.c  UDPserver.h  com.h  controller.c  controller.h  device.c  device.h  main.c  metabot.c  metabot.cfg  metabot.h  minuit.c  minuit.h  musicPlayer.c  net.c  net.h  parse.c  parse.h  procedure.bluetooth  script.bluetooth  str_array.c  str_array.h
